[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://mianFunction/feed_card/feed_detail.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="WindowDialog" type="AcceptDialog"]
margin_right = 705.0
margin_bottom = 273.0
size_flags_vertical = 0
window_title = "打卡记录详情"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 697.0
margin_bottom = 229.0

[node name="user_name" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/user_name"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "用户"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/user_name"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="cat_name" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 689.0
margin_bottom = 86.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/cat_name"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "猫咪"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/cat_name"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_name"
align = 1
valign = 1
autowrap = true

[node name="feed_date" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 689.0
margin_bottom = 131.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/feed_date"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "投喂时间"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/feed_date"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="place_name" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 689.0
margin_bottom = 176.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/place_name"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "地点"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/place_name"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_id"
align = 1
valign = 1
autowrap = true

[node name="feed_food" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 689.0
margin_bottom = 221.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="VBoxContainer/feed_food"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "投喂食物"
align = 1

[node name="TextEdit" type="Label" parent="VBoxContainer/feed_food"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "投喂食物"
align = 1
